overflow fix

--- a/src/css/LevelBanner.scss
+++ b/src/css/LevelBanner.scss
@@ -43,6 +43,7 @@
 				letter-spacing: 1px;
 				font-style: italic;
 				text-rendering: geometricPrecision;
+				overflow-wrap: anywhere;
 			}
 		}
 		.tags{
